--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-=======
->>>>>>> cadad04e9cf62c288fadf5896b85dccf63fd1d3c
   <title> Scantry! </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +9,6 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<<<<<<< HEAD
   <style>
   body {
       font: 400 15px/1.8 Lato, sans-serif;
@@ -173,9 +168,10 @@
 database.once('value', function(snapshot){
     if(snapshot.exists()){
         var content = '';
-
+        console.log(snapshot)
         snapshot.forEach(function(data){
-            var Grocery = data.val().grocery;
+            var Grocery = data.val().food;
+            console.log(Grocery);
             var Number = data.val().number;
             content += '<tr>';
             content += '<td>' + Grocery + '</td>'; //column1
@@ -189,8 +185,6 @@ database.once('value', function(snapshot){
 
 
 </script>
-=======
->>>>>>> cadad04e9cf62c288fadf5896b85dccf63fd1d3c
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -202,11 +196,7 @@ database.once('value', function(snapshot){
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-<<<<<<< HEAD
-      <a class="navbar-brand" href="#myPage">Logo</a>
-=======
       <a class="navbar-brand" href="#myPage">SCANTRY</a>
->>>>>>> cadad04e9cf62c288fadf5896b85dccf63fd1d3c
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -221,47 +211,33 @@ database.once('value', function(snapshot){
 
 <!-- Container (The Band Section) -->
 <div class="container text-center">
-<<<<<<< HEAD
  <div class="jumbotron" style="">
   <h1>Scantry: The Smart Pantry Scanner</h1>
  </div>
  <div>
+   <h3 style="padding-top: -50px"> <center>A smart food recognition device that modernizes the way we are around food </center> </h3>
  </div>
+ <br>
+<center>
+ <img src="./new/fullgraphic.png" width="600px" height="300px">
+</center>
  <table class="table table-striped" id="ex-table">
-    <thead class="thead-inverse">
+      <center>
         <tr>
+
         <th>Task Title</th>
         <th>Category</th>
-        <th>Date</th>
-        <th>Status</th>
+
         </tr>
-    </thead>
-    <tbody>
+
+
         <tr id="tr">
         <td id="titleTask"></td>
         <td id="categoryTask"></td>
-        <td id="dateTask"></td>
-        <td id="statusTask"></td>
        </tr>
-   </tbody>
+</center>
  </table>
 </div>
-<div>
-  <h3 style="padding-top: -50px"> <center>A smart food recognition device that modernizes the way we are around food </center> </h3>
-</div>
 
 </body>
 </html>
-=======
- <div class="jumbotron">
-  <img src="/new/fullgraphic.png">
- </div>
-</div>
-<div style="text-align: center">
-  <h3 style="padding-top: -20px; text-align: center"> A smart food recognition device that modernizes the way we are around food </center> </h3>
-  <p>Below is a list of your current food items as determined from recent scans.</p>
-</div>
-
-</body>
-</html>
->>>>>>> cadad04e9cf62c288fadf5896b85dccf63fd1d3c
