--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title> Scantry! </title>
+  <link rel="icon" href="/new/newlogoicon.ai/favicon.jpg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -183,7 +184,6 @@ database.once('value', function(snapshot){
     }
 });
 
-
 </script>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -196,6 +196,7 @@ database.once('value', function(snapshot){
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <img src="/new/newlogoicon.ai">
       <a class="navbar-brand" href="#myPage">SCANTRY</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
