--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ database.once('value', function(snapshot){
    <h3 style="padding-top: -50px; text-align: center"> A smart food recognition device that modernizes the way we are around food </h3>
  </div>
  <br>
- <img src="https://i.imgur.com/DFNmzn5.pn" style="align: center" width="600px" height="300px">
+ <img src="https://i.imgur.com/DFNmzn5.png" style="align: center" width="600px" height="300px">
 <p>Below is a list of your current inventory based on items you have recently scanned.</p>
  <table class="table table-striped" id="ex-table">
     <tr>
