--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title> Scantry! </title>
-  <link rel="icon" href="/new/newlogoicon.ai/favicon.jpg">
+  <link rel="icon" href="https://i.imgur.com/DFNmzn5.png/favicon.jpg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -57,7 +57,7 @@ database.once('value', function(snapshot){
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="/new/newlogoicon.ai">
+      <img src="https://i.imgur.com/DFNmzn5.png">
       <a class="navbar-brand" href="#myPage">SCANTRY</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -79,8 +79,8 @@ database.once('value', function(snapshot){
    <h3 style="padding-top: -50px; text-align: center"> A smart food recognition device that modernizes the way we are around food </h3>
  </div>
  <br>
- <img src="https://i.imgur.com/DFNmzn5.png" style="align: center" width="600px" height="300px">
-<p>Below is a list of your current inventory based on items you have recently scanned.</p>
+ <img src="./new/fullgraphic.png" style="align: center" width="600px" height="300px">
+  <p>Below is a list of your current inventory based on items you have recently scanned.</p>
  <table class="table table-striped" id="ex-table">
     <tr>
 
