--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ database.once('value', function(snapshot){
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="https://i.imgur.com/DFNmzn5.png">
-      <a class="navbar-brand" href="#myPage">SCANTRY</a>
+      <img src="https://i.imgur.com/DFNmzn5.png" height="100" width="300">
+
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
