--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ database.once('value', function(snapshot){
 
 <!-- Container (The Band Section) -->
 <div class="container text-center">
- <div class="jumbotron" style="">
+ <div class="jumbotron">
   <h1>Scantry: The Smart Pantry Scanner</h1>
  </div>
  <div>
