--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <title> Scantry! </title>
-  <link rel="icon" href="https://i.imgur.com/DFNmzn5.png/favicon.jpg">
+  <link rel="icon" href="/new/apple.png">
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
