--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ database.once('value', function(snapshot){
 <!-- Container (The Band Section) -->
 <div class="container text-center">
  <div class="jumbotron">
-  <h1 style="font-family: 'Spicy Rice';">Scantry: The Smart Pantry Scanner</h1>
+  <h1 style="font-family: "Quicksand";">Scantry: The Smart Pantry Scanner</h1>
  </div>
  <div>
    <h3 style="padding-top: -50px; text-align: center"> A smart food recognition device that modernizes the way we are around food </h3>
