--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="/new/apple.png">
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
@@ -75,7 +75,7 @@ database.once('value', function(snapshot){
 <!-- Container (The Band Section) -->
 <div class="container text-center">
  <div class="jumbotron">
-  <h1 style="font-family: "Quicksand";">Scantry: The Smart Pantry Scanner</h1>
+  <h1 style="font-family: "Oswald";">Scantry: The Smart Pantry Scanner</h1>
  </div>
  <div>
    <h3 style="padding-top: -50px; text-align: center"> A smart food recognition device that modernizes the way we are around food </h3>
