--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title> Scantry! </title>
-  <link rel="icon" href="/new/apple.png">
+  <link rel="icon" href="/documents/Apple.png">
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
