--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title> Scantry! </title>
+  <link rel="shortcut icon" type="image/png" href="_documents/Apple.png">
   <link rel="icon" href="/documents/Apple.png">
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
