--- a/index.html
+++ b/index.html
@@ -99,5 +99,15 @@ database.once('value', function(snapshot){
  </table>
 </div>
 
+<h1>Suggested Meals</h1>
+<script>
+
+  if(titleTask= Apple && titleTask=Orange){
+    document.write("Fruit Salad");
+    <img id="myImg" src="fruit.jpg">
+  }
+
+</script>
+
 </body>
 </html>
