--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ database.once('value', function(snapshot){
   <img src="./documents/fruit.jpg" style="" width="500px" height="300px">
 </div>
 <div>
-  <p> Bacon and Egg Croissant <a href="https://www.garnishandglaze.com/bacon-egg-breakfast-croissants/"> Recipe </a></p>
+  <p> Bacon and Egg Croissant <a href="https://www.garnishandglaze.com/bacon-egg-breakfast-croissants/"> Recipe and Nutrition </a></p>
   <img src="./documents/cris2.jpg" style="" width="500px" height="300px">
 </div>
 
